--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,25 @@
+<!-- Grey with black text -->
+<nav class="navbar navbar-expand-sm bg-primary navbar-dark">
+  <div class="container-fluid">
+    <ul class="navbar-nav">
+      <li class="nav-item" *ngFor="let item of nav" >
+        <a class="nav-link"
+        [routerLink]="item.link"
+        routerLinkActive="active"
+        >{{item.name}}</a>
+      </li>
+    
+    </ul>
+  </div>
+</nav>
+
   <router-outlet></router-outlet>
-  <div>
+
+
+  <!--
+
+
+<div >
     <a 
       *ngFor="let item of nav"
       [routerLink]="item.link"
@@ -8,3 +28,19 @@
 
      >{{ item.name }}</a>
   </div>
+
+
+    [routerLinkActiveOptions]="{ exact: item.exact }" 
+        <li class="nav-item">
+        <a class="nav-link active" href="#">Active</a>
+      </li>
+     <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#">Disabled</a>
+      </li>
+  -->
