--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,9 @@
-<p>
-  home works!
-</p>
+<div class="container-md mt-5 mb-5">
+  <h2>Dobrodošli!</h2>
+  <p>
+    Ovo je jednostavna web aplikacija koja prikazuje rad web api backenda i frontenda kreiranog u angularu.
+  </p>
+  <p>
+    Slobodno doživite novo web iskustvo i uživajte.
+  </p>
+</div>
